--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -167,6 +167,7 @@
     <script type="text/javascript" src="./directives/chat/feed%20items/chat-alert.js"></script>
     <script type="text/javascript" src="./directives/chat/feed%20items/chat-message.js"></script>
     <script type="text/javascript" src="./directives/chat/feed%20items/reward-redemption.js"></script>
+    <script type="text/javascript" src="./directives/commands/command-cooldown-settings.js"></script>
     <script type="text/javascript" src="./directives/commands/commandOption.js"></script>
     <script type="text/javascript" src="./directives/commands/simple-command-options.js"></script>
     <script type="text/javascript" src="./directives/conditional-effect/conditionDisplay.js"></script>
