Split backend and frontend tasks

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -125,7 +125,6 @@
     <script type="text/javascript" src="./services/connection.service.js"></script>
     <script type="text/javascript" src="./services/counters.service.js"></script>
     <script type="text/javascript" src="./services/currency.service.js"></script>
-    <script type="text/javascript" src="./services/custom-quick-actions.service.js"></script>
     <script type="text/javascript" src="./services/data-access.service.js"></script>
     <script type="text/javascript" src="./services/effect-helper.service.js"></script>
     <script type="text/javascript" src="./services/effect-queues.service.js"></script>
@@ -145,6 +144,7 @@
     <script type="text/javascript" src="./services/preset-effect-lists.service.js"></script>
     <script type="text/javascript" src="./services/profile-manager.service.js"></script>
     <script type="text/javascript" src="./services/pronouns.service.js"></script>
+    <script type="text/javascript" src="./services/quick-actions.service.js"></script>
     <script type="text/javascript" src="./services/quotes.service.js"></script>
     <script type="text/javascript" src="./services/settings.service.js"></script>
     <script type="text/javascript" src="./services/sidebar-manager.service.js"></script>
