--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -189,6 +189,7 @@
     <script type="text/javascript" src="./directives/controls/firebot-select.js"></script>
     <script type="text/javascript" src="./directives/controls/multiselect.js"></script>
     <script type="text/javascript" src="./directives/controls/notificationCenter.js"></script>
+    <script type="text/javascript" src="./directives/controls/resizer.js"></script>
     <script type="text/javascript" src="./directives/controls/role-based/role-number.js"></script>
     <script type="text/javascript" src="./directives/controls/role-based/role-numbers.js"></script>
     <script type="text/javascript" src="./directives/controls/role-based/role-percentage.js"></script>
