Clean up the code

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -132,7 +132,7 @@
     <script type="text/javascript" src="./services/font-manager.service.js"></script>
     <script type="text/javascript" src="./services/games.service.js"></script>
     <script type="text/javascript" src="./services/hot-key.service.js"></script>
-    <script type="text/javascript" src="./services/icon.service.js"></script>
+    <script type="text/javascript" src="./services/icons.service.js"></script>
     <script type="text/javascript" src="./services/import.service.js"></script>
     <script type="text/javascript" src="./services/integration.service.js"></script>
     <script type="text/javascript" src="./services/key-helper.service.js"></script>
@@ -235,7 +235,7 @@
     <script type="text/javascript" src="./directives/misc/firebot-item-table/firebot-item-table.js"></script>
     <script type="text/javascript" src="./directives/misc/hotkeyCapture.js"></script>
     <script type="text/javascript" src="./directives/misc/hover-class.directive.js"></script>
-    <script type="text/javascript" src="./directives/misc/iconpicker.js"></script>
+    <script type="text/javascript" src="./directives/misc/icon-picker.js"></script>
     <script type="text/javascript" src="./directives/misc/imageonload.js"></script>
     <script type="text/javascript" src="./directives/misc/keyCapture.js"></script>
     <script type="text/javascript" src="./directives/misc/replaceVariableMenu.js"></script>
