Make the context menu fully accessible

--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -105,7 +105,7 @@
 
             <td
               ng-if="$ctrl.sortTagContext != null"
-              class="fit-table-sort-tags"
+              class="fit-table-sort-tags py-4"
             >
               <sort-tags-row item="item" context="$ctrl.sortTagContext" on-update="$ctrl.triggerItemsUpdate()"></sort-tags-row>
             </td>
