Fix the width of the overflow menu in the edit effect modal

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -709,6 +709,7 @@
                       uib-dropdown-toggle
                       context-menu="getOverflowMenu()"
                       context-menu-on="click"
+                      context-menu-class="effect-overflow-menu"
                     >
                         <span class="noselect pointer effects-actions-btn" style="font-size: 31px"><i class="fal fa-ellipsis-v"></i></span>
                     </div>
