Fix overflow menus being covered by other page elements

--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -131,6 +131,7 @@
                     context-menu-on="click"
                     context-menu-class="angular-context-menu"
                     context-menu-orientation="left"
+                    context-menu-bottom-offset="60px"
                   >
                     <i class="fal fa-ellipsis-h"></i>
                 </button>
