--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -306,6 +306,7 @@
     <script type="text/javascript" src="./directives/modals/startup-scripts/startupScriptsListModal.js"></script>
     <script type="text/javascript" src="./directives/modals/timers/addOrEditTimer/addOrEditTimerModal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/editColumnsModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/viewers/import-viewers-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/preview-purge-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/purge-viewers-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/viewerDetailsModal.js"></script>
