Rename sort tags to tags

--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -68,7 +68,7 @@
             </th>
 
             <th ng-if="$ctrl.sortTagContext != null" class="muted">
-              <i class="fas fa-tag"></i> SORT TAGS
+              <i class="fas fa-tag"></i> TAGS
             </th>
 
             <th ng-if="$ctrl.showStatusIndicator"></th>
