Create a view hours importer for Streamlabs Chatbot (#1594)
Co-authored-by: pirak <82913078+pirak@users.noreply.github.com>
Co-authored-by: Erik Bigler <erikbigler@gmail.com>

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -305,7 +305,9 @@
     <script type="text/javascript" src="./directives/modals/startup-scripts/addOrEditStartupScriptModal.js"></script>
     <script type="text/javascript" src="./directives/modals/startup-scripts/startupScriptsListModal.js"></script>
     <script type="text/javascript" src="./directives/modals/timers/addOrEditTimer/addOrEditTimerModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/viewers/edit-imported-viewer-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/editColumnsModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/viewers/import-viewers-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/preview-purge-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/purge-viewers-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/viewers/viewerDetailsModal.js"></script>
