--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title><%= htmlWebpackPlugin.options.title %></title>
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:100,300,400,500,700|Roboto+Mono:300|Quicksand:300,400,700"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+
+    <!-- Allows access to listing audio output devices -->
+    <meta http-equiv="Feature-Policy" content="speaker-select self" />
+    <meta http-equiv="Permissions-Policy" content="speaker-select=self" />
+
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:100,300,400,500,700|Roboto+Mono:300|Quicksand:300,400,700"
+        rel="stylesheet" />
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
 </html>
