Fix expansion logic

--- a/gui/variable-inspector/index.html
+++ b/gui/variable-inspector/index.html
@@ -341,7 +341,7 @@
         },
         methods: {
           toggleExpanded() {
-            this.expanded = !this.expanded;
+            this.variable.expanded = !this.variable.expanded;
           },
           updateSecondsDisplay() {
             if (this.secondsLeft < 1) {
@@ -388,14 +388,9 @@
 
       Vue.component("variable-row", {
         props: ["variable"],
-        data: function () {
-          return {
-            expanded: false,
-          };
-        },
         methods: {
           toggleExpanded() {
-            this.expanded = !this.expanded;
+            this.variable.expanded = !this.variable.expanded;
           },
           deleteVariable() {
             console.log("DELETING VARIABLE", this.variable.key);
@@ -412,14 +407,14 @@
                 <div class="var" @click="toggleExpanded()">
                     <div class="header" style="display:flex; color: white;">
                         <div class="var-cell">{{variable.key}}</div>
-                        <div class="var-cell" :class="{ 'var-row-collapsed': !expanded }">{{variable.history[0].value}}</div>
+                        <div class="var-cell" :class="{ 'var-row-collapsed': !variable.expanded }">{{variable.history[0].value}}</div>
                         <div class="var-cell"><expire-display :ttl="variable.history[0].ttl" :action="variable.history[0].action" /></div>
                         <div class="var-cell">{{variable.history[0].action}}</div>
                         <div style="width: 15px;">
-                            <caret-icon :direction="expanded ? 'down' : 'right'" />
+                            <caret-icon :direction="variable.expanded ? 'down' : 'right'" />
                         </div>
                     </div>
-                    <div v-if="expanded">
+                    <div v-if="variable.expanded">
                         <div style="display: flex; padding: 10px 10px;align-items: center;">
                             <div style="height: 1px; background: #807676; flex: 1;"></div>
                             <div style="margin: 0 13px; font-size: 12px; color: #909090;">History</div>
@@ -478,6 +473,7 @@
               action: "set",
             },
           ],
+          expanded: false
         }));
       });
 
@@ -502,6 +498,7 @@
                 action: "set",
               },
             ],
+            expanded: false
           });
         }
       });
