Add URL moderation allowlist

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -284,6 +284,7 @@
     <script type="text/javascript" src="./directives/modals/misc/edit-overlay-instances-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/edit-stream-info-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/editBannedWordsModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/misc/editUrlAllowlistModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/errorDetailModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/fontManagementModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/give-currency-modal.js"></script>
