--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -186,6 +186,7 @@
     <script type="text/javascript" src="./directives/controls/exempt-roles.js"></script>
     <script type="text/javascript" src="./directives/controls/fileChooser.js"></script>
     <script type="text/javascript" src="./directives/controls/firebot-button.js"></script>
+    <script type="text/javascript" src="./directives/controls/firebot-checkbox.js"></script>
     <script type="text/javascript" src="./directives/controls/firebot-input.js"></script>
     <script type="text/javascript" src="./directives/controls/firebot-radios.js"></script>
     <script type="text/javascript" src="./directives/controls/firebot-select.js"></script>
