feat: prompt for preset args on test and quick action (#1653)

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -265,6 +265,7 @@
     <script type="text/javascript" src="./directives/modals/effect-queues/addOrEditEffectQueueModal.js"></script>
     <script type="text/javascript" src="./directives/modals/effects/add-edit-preset-effect-list-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/effects/add-new-effect-modal.js"></script>
+    <script type="text/javascript" src="./directives/modals/effects/trigger-preset-effect-list-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/events/addOrEditEventModal.js"></script>
     <script type="text/javascript" src="./directives/modals/events/simulateGroupEventsModal.js"></script>
     <script type="text/javascript" src="./directives/modals/filters/addOrEditFilter/addOrEditFilterModal.js"></script>
