--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -83,7 +83,7 @@
             context-menu-class="angular-context-menu"
           >
             <td ng-if="$ctrl.testButton == true" class="fit-test-button-body">
-              <span
+              <span aria-label="Test" 
                 ng-click="$ctrl.onTestButtonClicked({ itemId: item.id })"
                 uib-tooltip="Test Effects"
                 tooltip-append-to-body="true"
@@ -125,7 +125,7 @@
                   <i class="fal fa-bars" aria-hidden="true"></i>
                 </span>
                 <div class="ml-10">
-                  <button
+                  <button aria-label="Open Context Menu"  
                     class="noselect clickable text-5xl"
                     context-menu="$ctrl.getContextMenu(item)"
                     context-menu-on="click"
