--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -358,6 +358,10 @@
               justify-content: center;
             "
           >
+          <!-- <div style="margin-left: auto; margin-right: 35px;">
+            <i class="far fa-download" style="cursor:pointer;"></i>
+            <div style="background: blue;">NEW</div>
+          </div> -->
             <notification-center
               style="margin-left: auto"
             ></notification-center>
