--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -143,6 +143,7 @@
     <script type="text/javascript" src="./services/pronouns.service.js"></script>
     <script type="text/javascript" src="./services/quick-actions.service.js"></script>
     <script type="text/javascript" src="./services/quotes.service.js"></script>
+    <script type="text/javascript" src="./services/scheduled-task.service.js"></script>
     <script type="text/javascript" src="./services/settings.service.js"></script>
     <script type="text/javascript" src="./services/sidebar-manager.service.js"></script>
     <script type="text/javascript" src="./services/sort-tags.service.js"></script>
@@ -297,6 +298,7 @@
     <script type="text/javascript" src="./directives/modals/quotes/addOrEditQuoteModal.js"></script>
     <script type="text/javascript" src="./directives/modals/quotes/import-quotes-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/roles/addOrEditCustomRoleModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/scheduled-tasks/add-or-edit-scheduled-task-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/setups/add-edit-setup-question.js"></script>
     <script type="text/javascript" src="./directives/modals/setups/create-setup-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/setups/firebot-component-list-modal.js"></script>
