--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -202,6 +202,7 @@
     <script type="text/javascript" src="./directives/controls/sort-tags-row.js"></script>
     <script type="text/javascript" src="./directives/controls/soundPlayer.js"></script>
     <script type="text/javascript" src="./directives/controls/specialized/discord-channel-webhooks.js"></script>
+    <script type="text/javascript" src="./directives/controls/specialized/discord-file-upload-list.js"></script>
     <script type="text/javascript" src="./directives/controls/specialized/gift-receivers-list.js"></script>
     <script type="text/javascript" src="./directives/controls/time-input.js"></script>
     <script type="text/javascript" src="./directives/effect-option-settings/eosAudioOutputDevice.js"></script>
@@ -270,6 +271,7 @@
     <script type="text/javascript" src="./directives/modals/filters/addOrEditFilter/addOrEditFilterModal.js"></script>
     <script type="text/javascript" src="./directives/modals/games/editGameSettingsModal.js"></script>
     <script type="text/javascript" src="./directives/modals/hotkeys/addOrEditHotkey/addOrEditHotkeyModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/integrations/addOrEditDiscordFileUploadModal.js"></script>
     <script type="text/javascript" src="./directives/modals/integrations/addOrEditDiscordWebhookModal.js"></script>
     <script type="text/javascript" src="./directives/modals/integrations/editIntegrationSettingsModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/aboutModal.js"></script>
