--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -89,6 +89,8 @@
 
     <script src="./app-main.js"></script>
 
+    <script src="https://www.youtube.com/iframe_api"></script>
+
     <!-- include: "type": "js", "files": "controllers/**/*.js" -->
     <script type="text/javascript" src="./controllers/channel-rewards.controller.js"></script>
     <script type="text/javascript" src="./controllers/chat-messages.controller.js"></script>
