--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -278,7 +278,6 @@
     <script type="text/javascript" src="./directives/modals/misc/add-or-edit-gift-receiver-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/add-or-edit-header-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/add-or-edit-metadata-modal.js"></script>
-    <script type="text/javascript" src="./directives/modals/misc/botLoginModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/connectionPanelModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/copyShareCodeModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/create-overlay-instances.modal.js"></script>
@@ -296,6 +295,7 @@
     <script type="text/javascript" src="./directives/modals/misc/selectModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/setupWizardModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/stream-preview-modal.js"></script>
+    <script type="text/javascript" src="./directives/modals/misc/twitch-login-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/txtFileWordImportModal.js"></script>
     <script type="text/javascript" src="./directives/modals/quotes/addOrEditQuoteModal.js"></script>
     <script type="text/javascript" src="./directives/modals/quotes/import-quotes-modal.js"></script>
@@ -474,7 +474,7 @@
             <div ng-if="invalidAccounts && invalidAccounts.length > 0" class="row mb-8" style="text-align: center;">
               The following account(s) have been logged out because they are out of date:
               <br />
-              <strong>{{ invalidAccounts.join(", ") }}</strong>
+              <strong style="text-transform: capitalize">{{ invalidAccounts.join(", ") }}</strong>
               <br /><br />
               Please log back in to continue.
             </div>
