--- a/src/gui/splashscreen/splash.html
+++ b/src/gui/splashscreen/splash.html
@@ -34,6 +34,7 @@
             padding: 25px;
             background: #34363c;
             border-radius: 30px;
+            border: 1px solid #999;
             box-shadow: 0px 5px 10px -7px rgba(0,0,0,0.86);
             min-width: 300px;
         }
