--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -561,7 +561,10 @@
         <h4 class="modal-title" id="errorLabel">Error</h4>
       </div>
       <div class="modal-body">
-        <p>{{message}}</p>
+        <div style="display: flex;">
+          <div class="modal-icon"><i class="fad fa-times-circle" aria-hidden="true"></i></div>
+          <div>{{message}}</div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="close()">Close</button>
@@ -575,7 +578,10 @@
         <h4 class="modal-title" id="errorLabel">Info</h4>
       </div>
       <div class="modal-body">
-        <p>{{message}}</p>
+        <div style="display: flex;">
+          <div class="modal-icon"><i class="fad fa-info-circle" aria-hidden="true"></i></div>
+          <div>{{message}}</div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="close()">Close</button>
