chore(ui): incorporate MDI icons, standardize copy and paste icons on MDI

--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -82,6 +82,9 @@
       src="../../../node_modules/countup.js/dist/countUp.min.js"
     ></script>
 
+    <!-- Iconify ref for MDI icons -->
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+
     <script src="./app-main.js"></script>
 
     <!-- include: "type": "js", "files": "controllers/**/*.js" -->
