--- a/src/backend/common/handlers/js-sandbox/sandbox.html
+++ b/src/backend/common/handlers/js-sandbox/sandbox.html
@@ -113,7 +113,8 @@ window.onmessage = (event) => {
             const metadata = await Firebot.metadata();
 
             // Wrap the code to evaluate
-            const evaluate = new Function('Firebot', 'metadata', 'parameters', `return (async ()=>{"use strict";${parameters[0]}})()`);
+            const AsyncFunction = (async function () {}).constructor;
+            const evaluate = new AsyncFunction('Firebot', 'metadata', 'parameters', parameters[0]);
 
             // Attempt to call the evaluator function
             const result = await evaluate(Firebot, metadata, parameters.slice(1));
